tests/baselines/reference/functionCall17.errors.txt
tests/cases/compiler/functionCall17.ts(2,12): error TS2345: Argument of type '1' is not assignable to parameter of type 'string'.
tests/cases/compiler/functionCall17.ts(4,1): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/functionCall17.ts(5,5): error TS2345: Argument of type '1' is not assignable to parameter of type 'string'.
tests/cases/compiler/functionCall17.ts(6,12): error TS2345: Argument of type '1' is not assignable to parameter of type 'string'.


==== tests/cases/compiler/functionCall17.ts (4 errors) ====
    function foo(a:string, b?:string, c?:number, ...d:number[]){}
    foo('foo', 1); 
               ~
!!! error TS2345: Argument of type '1' is not assignable to parameter of type 'string'.
    foo('foo'); 
    foo();
    ~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    foo(1, 'bar');
        ~
!!! error TS2345: Argument of type '1' is not assignable to parameter of type 'string'.
    foo('foo', 1, 3);
               ~
!!! error TS2345: Argument of type '1' is not assignable to parameter of type 'string'.
    foo('foo', 'bar', 3, 4);
    